--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -9,6 +9,7 @@
   <link rel="icon" href="{{ asset('img/logo/favicon.ico') }}" type="image/x-icon">
   <!-- CSS -->
   <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
+  <link rel="stylesheet" href="{{ asset('assets/css/header.css') }}">
   <!-- FontAwesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
