--- a/templates/booking/success.html.twig
+++ b/templates/booking/success.html.twig
@@ -1,4 +1,3 @@
-{# templates/booking/success.html.twig #}
 {% extends 'base.html.twig' %}
 
 {% block title %}Booking Success{% endblock %}
@@ -10,6 +9,28 @@
         <p>Your booking has been successfully submitted.</p>
         <hr>
         <p class="mb-0">Thank you for choosing our service.</p>
+    </div>
+
+    <div class="invoice-details mt-4">
+        <h5>Invoice Details:</h5>
+        <table class="table">
+            <tr>
+                <td><strong>Customer Name:</strong></td>
+                <td>{{ booking.getCustomername() }}</td>
+            </tr>
+            <tr>
+                <td><strong>Number of Nights:</strong></td>
+                <td>{{ numberOfNights }}</td>
+            </tr>
+            <tr>
+                <td><strong>Price per Night:</strong></td>
+                <td>${{ pricePerNight }}</td>
+            </tr>
+            <tr>
+                <td><strong>Total Price Paid:</strong></td>
+                <td>${{ totalPrice }}</td>
+            </tr>
+        </table>
     </div>
 </div>
 {% endblock %}
