--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -64,7 +64,7 @@
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="{{ path('app_my_profile', {'id': app.user.id}) }}">View Profile</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ path('app_logout') }}"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                    <li><a class="dropdown-item" href="{{ path('app_logout') }}">LogOut</a></li>
             </li>
                 </ul>
             </li>
