--- a/templates/security/edit_profile.html.twig
+++ b/templates/security/edit_profile.html.twig
@@ -33,6 +33,9 @@
                                 {{ form_row(form.img, {'attr': {'class': 'form-control', 'id': 'userImage'}}) }}
                                 </div>
                             </div>
+                            <button type="button" class="btn btn-secondary" onclick="window.history.back();">
+                                <i class="fas fa-arrow-left"></i> Back
+                            </button>
                             <button type="submit" class="btn btn-primary btn-lg w-100">Save Changes</button>
                         {{ form_end(form) }}
                     </div>
