--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -1,3 +1,5 @@
+/* Custom styles for the header */
+
 .header {
     background-color: black !important;
     margin-left: 2rem;
@@ -27,4 +29,97 @@
 
 .header-text li {
     padding: 1rem;
+}
+
+.container-fluid {
+    margin-bottom: 10rem;
+}
+
+footer {
+    background-color: black !important;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    margin-top: 20rem;
+}
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+
+/* Custom styles for Main Page */
+
+.main-page {
+    display: flex;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+}
+
+.main-left {
+    width: 50%;
+}
+
+.main-right {
+    width: 50%;
+    align-content: center;
+}
+
+.slider {
+    position: relative;
+    width: 100%;
+    height: 500px;
+    display: flex;
+    overflow: hidden;
+}
+
+.slides {
+    display: flex;
+    transition: transform 0.6s ease-in-out;
+}
+
+.slide {
+    min-width: 100%;
+    box-sizing: border-box;
+}
+
+.slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.prev,
+.next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 1rem;
+    cursor: pointer;
+    z-index: 10;
+}
+
+.prev {
+    left: 10px;
+}
+
+.next {
+    right: 10px;
+}
+
+
+/* Custom styles for Booking */
+
+.booking-header {
+    text-align: center;
+}
+
+.booking-form form {
+    display: flex;
+    flex-direction: column;
 }
