--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,10 +1,8 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
-        <p class="footer-text">© 2024 Hotel Dashboard. All rights reserved.</p>
-      </div>
-      <div class="col-md-6 text-md-right">
+      <div class="footer">
+        <p class="footer-text">©2024 Hotel Dashboard</p>
         <p class="footer-text">Designed by <a href="#" target="_blank">Al-Shalal/Hiess</a></p>
       </div>
     </div>
@@ -12,5 +10,6 @@
 </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="{{ asset('assets/js/javascript.js') }}"></script>
 </body>
 </html>
