--- a/templates/rooms/edit.html.twig
+++ b/templates/rooms/edit.html.twig
@@ -14,7 +14,9 @@
 
     <div class="row mt-3">
         <div class="col-md-6">
-            <a href="{{ path('app_rooms_index') }}" class="btn btn-secondary">Back to list</a>
+            <button type="button" class="btn btn-secondary" onclick="window.history.back();">
+                        <i class="fas fa-arrow-left"></i> Back
+            </button>
         </div>
         <div class="col-md-6">
             {{ include('rooms/_delete_form.html.twig') }}
