--- a/templates/rooms/new.html.twig
+++ b/templates/rooms/new.html.twig
@@ -13,7 +13,9 @@
                     {{ include('rooms/_form.html.twig') }}
                 </div>
             </div>
-            <a href="{{ path('app_rooms_index') }}" class="btn btn-secondary mt-3 mb-3">Back to list</a>
+            <button type="button" class="btn btn-secondary" onclick="window.history.back();">
+                        <i class="fas fa-arrow-left"></i> Back
+            </button>
         </div>
     </div>
 </div>
