--- a/templates/rooms/show.html.twig
+++ b/templates/rooms/show.html.twig
@@ -24,7 +24,9 @@
                 <div class="card-footer">
                     <div class="d-flex justify-content-between align-items-center">
                         <div>
-                            <a href="{{ path('app_rooms_index') }}" class="btn btn-primary mr-2">Back</a>
+                            <button type="button" class="btn btn-secondary" onclick="window.history.back();">
+                                <i class="fas fa-arrow-left"></i> Back
+                            </button>
                             {% if is_granted('ROLE_USER') %}
                             <a href="{{ path('app_booking_new', {'roomId': room.id}) }}" class="btn btn-success">Book Now</a>
                             {% endif %}
