--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -36,7 +36,9 @@
                             </div>
 
                             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
+                            <button type="button" class="btn btn-secondary" onclick="window.history.back();">
+                                <i class="fas fa-arrow-left"></i> Back
+                            </button>
                             <button class="btn btn-primary btn-lg w-100" type="submit">Sign in</button>
                         </form>
                     </div>
