--- a/templates/security/view_profile.html.twig
+++ b/templates/security/view_profile.html.twig
@@ -17,6 +17,9 @@
                     </div>
                 </div>
             </div>
+            <button type="button" class="btn btn-secondary" onclick="window.history.back();">
+                        <i class="fas fa-arrow-left"></i> Back
+            </button>
         </div>
     </div>
 {% endblock %}
