--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -50,12 +50,24 @@ footer {
 }
 
 
-/* Custom styles for Main Page */
+/* Custom styles for Home Page */
 
 .main-page {
+    position: relative;
+    padding-top: 100vh;
     display: flex;
     margin-top: 3rem;
     margin-bottom: 3rem;
+}
+
+.main-image {
+    position: absolute;
+    top: -150px;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    z-index: -1;
 }
 
 .main-left {
