--- a/templates/home/available_rooms.html.twig
+++ b/templates/home/available_rooms.html.twig
@@ -16,7 +16,11 @@
                             </h5>
                             <p class="card-text"><strong>Price:</strong> ${{ room.price }}</p>
                             <p class="card-text"><strong>Type:</strong> {{ room.type }}</p>
-                            <a href="{{ path('app_booking_new', {'roomId': room.id}) }}?startdate={{ startDate|date('Y-m-d') }}&enddate={{ endDate|date('Y-m-d') }}"" class="btn btn-primary">Book Now</a>
+                            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                                <a href="{{ path('app_booking_new', {'roomId': room.id}) }}?startdate={{ startDate|date('Y-m-d') }}&enddate={{ endDate|date('Y-m-d') }}" class="btn btn-primary">Book Now</a>
+                            {% else %}
+                                <a href="{{ path('app_login') }}" class="btn btn-primary">Book Now</a>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
