--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -36,10 +36,15 @@
                             </div>
 
                             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-                            <button type="button" class="btn btn-secondary" onclick="window.history.back();">
-                                <i class="fas fa-arrow-left"></i> Back
-                            </button>
-                            <button class="btn btn-primary btn-lg w-100" type="submit">Sign in</button>
+
+                            <div class="d-flex justify-content-between">
+                                <button type="button" class="btn btn-secondary" onclick="window.history.back();">
+                                    <i class="fas fa-arrow-left"></i> Back
+                                </button>
+                                <button class="btn btn-primary" type="submit">
+                                    <i class="fas fa-sign-in-alt"></i> Sign in
+                                </button>
+                            </div>
                         </form>
                     </div>
                 </div>
@@ -47,4 +52,3 @@
         </div>
     </div>
 {% endblock %}
-
