--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -26,6 +26,22 @@
     align-items: center;
 }
 
+.main-page-header-content {
+    position: relative;
+    z-index: 99;
+    margin-top: 30vh;
+    margin-left: 5rem;
+    color: white;
+}
+
+.main-page-header-content h1 {
+    font-size: 4rem;
+}
+
+.main-page-header-content h2 {
+    font-size: 2rem;
+}
+
 .header-text {
     justify-content: end;
 }
@@ -58,7 +74,7 @@ footer {
 .main-page {
     position: relative;
     display: flex;
-    margin-top: 100vh;
+    margin-top: 50vh;
 }
 
 .main-image {
@@ -70,6 +86,7 @@ footer {
     overflow: hidden;
     z-index: -1;
     /* Ensures the image stays behind other content */
+    filter: brightness(0.5);
 }
 
 .main-image img {
@@ -147,4 +164,45 @@ footer {
 .booking-form form {
     display: flex;
     flex-direction: column;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+
+/* Booking Form */
+
+.booking-form {
+    background-color: whitesmoke;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column; /* Neue Zeile hinzugefügt */
+    margin-left: 6rem!important;
+    margin-right: 6rem!important;
+}
+
+.booking-form .form-control {
+    border-radius: 4px;
+    border: 1px solid #ced4da;
+    padding: 10px;
+    font-size: 16px;
+    margin-bottom: 10px; /* Abstand zwischen den Eingabefeldern hinzugefügt */
+}
+
+.booking-form .btn-purple {
+    background-color: #800080;
+    border-color: #800080;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 8px;
+    color: white;
+    width: 100%; /* Breite auf 100% gesetzt */
+    margin-top: 10px; /* Abstand zum vorherigen Element hinzugefügt */
+    transition: background-color 0.3s; /* Übergangseffekt hinzugefügt */
+}
+
+.booking-form .btn-purple:hover {
+    background-color: #a700a7; 
 }
