--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hotel Dashboard</title>
   
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0e263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  
   <!-- Favicon -->
   <link rel="icon" href="{{ asset('img/logo/favicon.ico') }}" type="image/x-icon">
   <!-- CSS -->
@@ -17,71 +18,101 @@
   <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}">
   <!-- FontAwesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  
+  <style>
+    .navbar {
+      background-color: #343a40;
+    }
+    .navbar-nav .nav-link, .navbar-brand {
+      color: white !important;
+    }
+    .navbar-toggler {
+      border-color: rgba(255, 255, 255, 0.1);
+      margin-right: 2rem;
+    }
+    .navbar-toggler-icon {
+      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%28255, 255, 255, 1%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+    }
+    .dropdown-menu {
+      background-color: #343a40;
+      color: white;
+      border: none;
+      box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.15);
+    }
+    .dropdown-item {
+      color: white !important;
+    }
+    .dropdown-item:hover {
+      background-color: #495057;
+    }
+    @media (max-width: 991.98px) {
+      .navbar-collapse {
+        box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.15);
+      }
+    }
+  </style>
 </head>
 <body>
 
-<nav class="navbar-expand-lg header">
-    <a class="navbar-brand" href="#">
-            <img src="{{ asset('img/logo/logo.png') }}" alt="Logo" width="50"> Hotel Dashboard
+<nav class="navbar navbar-expand-lg header">
+    <a class="navbar-brand" href="/">
+        <img src="{{ asset('img/logo/logo.png') }}" alt="Logo" width="50"> Hotel Dashboard
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse header-text" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-              <a class="nav-link" href="{{ path('app_home') }}">
-                  <i class="fas fa-home"></i> Home <span class="sr-only">(current)</span>
-              </a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="{{ path('app_rooms_index') }}">
-                  <i class="fas fa-bed"></i> Rooms
-              </a>
-          </li>{% if is_granted('IS_AUTHENTICATED_FULLY') %}
-          <li class="nav-item">
-              <a class="nav-link" href="{{ path('app_booking') }}">
-                  <i class="fas fa-calendar-check"></i> Bookings
-              </a>
-          </li>{% endif %}
-          {% if is_granted('ROLE_ADMIN') %}
-          <li class="nav-item">
-              <a class="nav-link" href="{{ path('app_customers') }}">
-                  <i class="fas fa-users"></i> Customers
-              </a>
-          </li>
-          {% endif %}
-          {# <li class="nav-item">
-              <a class="nav-link" href="#">
-                  <i class="fas fa-cog"></i> Settings
-              </a>
-          </li> #}
-          {% if app.user %}
+            <li class="nav-item active">
+                <a class="nav-link" href="{{ path('app_home') }}">
+                    <i class="fas fa-home"></i> Home <span class="sr-only">(current)</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('app_rooms_index') }}">
+                    <i class="fas fa-bed"></i> Rooms
+                </a>
+            </li>
+            {% if is_granted('ROLE_ADMIN') and is_granted('ROLE_USER') %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('app_booking') }}">
+                    <i class="fas fa-calendar-check"></i> Bookings
+                </a>
+            </li>
+            {% endif %}
+            {% if is_granted('ROLE_ADMIN') %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('app_customers') }}">
+                    <i class="fas fa-users"></i> Customers
+                </a>
+            </li>
+            {% endif %}
+            {% if app.user %}
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     {% if app.user.img %}
-                        <img src="{{ asset('img/profile/' ~ app.user.img) }}" alt="Profile Image" class="rounded-circle" style="width: 30px; height: 30px; object-fit: cover; margin-right: 10px;">
+                    <img src="{{ asset('img/profile/' ~ app.user.img) }}" alt="Profile Image" class="rounded-circle" style="width: 30px; height: 30px; object-fit: cover; margin-right: 10px;">
                     {% endif %}
                     {{ app.user.name }}
                 </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="{{ path('app_profile', {'id': app.user.id}) }}">Edit Profile</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="{{ path('app_my_profile', {'id': app.user.id}) }}">View Profile</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="{{ path('app_logout') }}">LogOut</a></li>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{{ path('app_profile', {'id': app.user.id}) }}">Edit Profile</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{{ path('app_my_profile', {'id': app.user.id}) }}">View Profile</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{{ path('app_logout') }}">LogOut</a>
+                </div>
             </li>
-                </ul>
-            </li>
-        {% else %}
+            {% else %}
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('app_login') }}">
                     <i class="fas fa-sign-in-alt"></i> Login
                 </a>
             </li>
-        {% endif %}
-      </ul>
+            {% endif %}
+        </ul>
     </div>
 </nav>
 
-
+</body>
+</html>
