--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -227,3 +227,30 @@ footer {
 .booking-form .btn-purple:hover {
     background-color: #a700a7;
 }
+
+
+/* Mobile Anpassungen */
+
+@media (max-width: 992px) {
+    .main-page {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .main-left,
+    .main-right {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .booking-form {
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+    }
+
+    .form-row,
+    .form-row2 {
+        display: flex;
+        flex-direction: column;
+    }
+}
