--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -16,6 +16,7 @@
 
 .navbar {
     position: absolute !important;
+    top: 0;
     width: 100%;
     max-width: 90%;
     left: 50%;
@@ -63,7 +64,6 @@
 
 footer {
     background-color: black !important;
-    position: fixed;
     bottom: 0;
     width: 100%;
     margin-top: 20rem;
@@ -87,12 +87,9 @@ footer {
 }
 
 .main-image {
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    z-index: -1;
     filter: brightness(0.5);
 }
 
@@ -104,6 +101,7 @@ footer {
 
 .container-fluid {
     padding: 0 !important;
+    margin-top: 20vh;
 }
 
 .main-left {
