--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -66,7 +66,7 @@ footer {
     background-color: black !important;
     bottom: 0;
     width: 100%;
-    margin-top: 20rem;
+    margin-top: 10vh;
 }
 
 .footer {
@@ -81,7 +81,7 @@ footer {
 .main-page {
     position: relative;
     display: flex;
-    margin-top: 2rem;
+    margin-top: 10vh;
     padding-left: 2rem;
     padding-right: 2rem;
 }
