--- a/templates/booking/edit.html.twig
+++ b/templates/booking/edit.html.twig
@@ -5,31 +5,31 @@
 
 {% block body %}
 <div class="container mt-5">
-    <h1>Edit Booking</h1>
+    <h1 class="text-center">Edit Booking</h1>
     <div class="row justify-content-center">
         <div class="col-md-6">
-            {{ form_start(form) }}
-                <div class="form-group">
-                    {{ form_label(form.customername) }}
-                    {{ form_widget(form.customername, {'attr': {'class': 'form-control'}}) }}
-                </div>
-                <div class="form-group">
-                    {{ form_label(form.startdate) }}
-                    {{ form_widget(form.startdate, {'attr': {'class': 'form-control'}}) }}
-                </div>
-                <div class="form-group">
-                    {{ form_label(form.enddate) }}
-                    {{ form_widget(form.enddate, {'attr': {'class': 'form-control'}}) }}
-                </div>
-                <div class="form-group">
-                    {{ form_label(form.rooms) }}
-                    {{ form_widget(form.rooms, {'attr': {'class': 'form-control'}}) }}
-                </div>
-                <button type="submit" class="btn btn-primary">Save</button>
+            {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
+            <div class="form-group mb-3">
+                {{ form_label(form.customername, null, {'label_attr': {'class': 'form-label'}}) }}
+                {{ form_widget(form.customername, {'attr': {'class': 'form-control'}}) }}
+            </div>
+            <div class="form-group mb-3">
+                {{ form_label(form.startdate, null, {'label_attr': {'class': 'form-label'}}) }}
+                {{ form_widget(form.startdate, {'attr': {'class': 'form-control'}}) }}
+            </div>
+            <div class="form-group mb-3">
+                {{ form_label(form.enddate, null, {'label_attr': {'class': 'form-label'}}) }}
+                {{ form_widget(form.enddate, {'attr': {'class': 'form-control'}}) }}
+            </div>
+            <div class="form-group mb-3">
+                {{ form_label(form.rooms, null, {'label_attr': {'class': 'form-label'}}) }}
+                {{ form_widget(form.rooms, {'attr': {'class': 'form-control'}}) }}
+            </div>
+            <div class="d-grid">
+                <button type="submit" class="btn btn-primary btn-block">Save</button>
+            </div>
             {{ form_end(form) }}
         </div>
     </div>
 </div>
 {% endblock %}
-
-
