--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -15,6 +15,7 @@
   <!-- CSS -->
   <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
   <link rel="stylesheet" href="{{ asset('assets/css/header.css') }}">
+  <link rel="stylesheet" href="{{ asset('assets/css/available-rooms.css') }}">
   <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}">
   <!-- FontAwesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
