--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -10,6 +10,10 @@
                     <div class="card-body">
                         <h1 class="card-title text-center mb-4">Please sign in</h1>
 
+                        {% if app.session.flashbag.has('notice') %}
+                            <div class="alert alert-info">{{ app.session.flashbag.get('notice') }}</div>
+                        {% endif %}
+
                         <form method="post">
                             {% if error %}
                                 <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -22,6 +26,9 @@
                             {% else %}
                                 <div class="mb-3">
                                     Don't have an account? <a href="{{ path('app_register') }}">Register</a>
+                                </div>
+                                <div class="mb-3">
+                                    <a href="{{ path('app_forgot_password_request') }}">Forgot your password?</a>
                                 </div>
                             {% endif %}
 
