--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -74,6 +74,11 @@
                     <i class="fas fa-bed"></i> Rooms
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('contact') }}">
+                    <i class="fas fa-envelope"></i> Contact
+                </a>
+            </li>
             {% if is_granted('ROLE_ADMIN') and is_granted('ROLE_USER') %}
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('app_booking') }}">
