--- a/templates/home/available_rooms.html.twig
+++ b/templates/home/available_rooms.html.twig
@@ -3,9 +3,8 @@
 
 {% block body %}
 <div>
-    <h2 class="mt-5">Available Rooms</h2>
     {% if availableRooms %}
-        <div class="row">
+        <div class="row available-rooms">
             {% for room in availableRooms %}
                 <div class="col-md-3 col-sm-6 mb-4">
                     <div class="card room-card">
@@ -19,7 +18,7 @@
                             {% if is_granted('ROLE_USER') %}
                                 <a href="{{ path('app_booking_new', {'roomId': room.id}) }}?startdate={{ startDate|date('Y-m-d') }}&enddate={{ endDate|date('Y-m-d') }}" class="btn btn-primary">Book Now</a>
                             {% else %}
-                                <a href="{{ path('app_login') }}" class="btn btn-primary">Book Now</a>
+                                <a href="{{ path('app_login') }}" class="available-rooms-btn btn btn-primary">Book Now</a>
                             {% endif %}
                         </div>
                     </div>
