--- a/templates/rooms/room_index_user.html.twig
+++ b/templates/rooms/room_index_user.html.twig
@@ -5,23 +5,26 @@
 {% block body %}
 <div class="container">
     <h1 class="mt-4 mb-4 text-center">Rooms Index</h1>
-
-    <div class="table-responsive">
-        <table class="table table-striped table-bordered table-sm">
-            <tbody>
-                {% for room in rooms %}
-                <tr>
-                    <td class="text-center small"><a href="{{ path('app_rooms_show', {'id': room.id}) }}" class="btn btn-link btn-sm">{{ room.name }}</a></td>
-                    <td class="text-center small">${{ room.price }}</td>
-                    <td class="text-center"><img src="{{ asset('img/image-rooms/' ~ room.img) }}" alt="{{ room.name }}" class="img-thumbnail" style="max-height: 100px;"></td>
-                </tr>
-                {% else %}
-                <tr>
-                    <td colspan="8" class="text-center small">No records found</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+    <div class="rooms-list">
+        {% for room in rooms %}
+        <a href="{{ path('app_rooms_show', {'id': room.id}) }}" class="room-link">
+            <div class="room">
+                <div class="rooms-user-text">
+                    {{ room.name }}</br>
+                    {{ room.price }}€
+                </div>
+                <div class="room-right rooms-image">
+                    <div class="image-container">
+                        <img src="{{ asset('img/image-rooms/' ~ room.img) }}" alt="{{ room.name }}">
+                    </div>
+                </div>
+            </div>
+        </a>
+        {% else %}
+        <div class="no-records text-center small">
+            No records found
+        </div>
+        {% endfor %}
     </div>
 </div>
 {% endblock %}
