--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -63,4 +63,31 @@
     </div>
 </div>
 
+<div class="main-page-advantages">
+    <div class="main-page-advantages-text">
+        <h1>Hotel GYM</h1>
+    </div>
+    <div>
+        <img src="img/main-page/home/gym.jpg" alt="Slide 1">
+    </div>
+</div>
+
+<div class="main-page-advantages">
+    <div class="main-page-advantages-text">
+        <h1>Hotel TENNIS</h1>
+    </div>
+    <div>
+        <img src="img/main-page/home/tennis.jpg" alt="Slide 1">
+    </div>
+</div>
+
+<div class="main-page-advantages">
+    <div class="main-page-advantages-text">
+        <h1>Hotel POOL</h1>
+    </div>
+    <div>
+        <img src="img/main-page/home/pool.jpg" alt="Slide 1">
+    </div>
+</div>
+
 {% endblock %}
