--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -224,6 +224,33 @@ footer {
     background-color: #a700a7;
 }
 
+.main-page-advantages {
+    position: relative;
+    width: calc(100% - 4rem);
+    margin: 10vh 2rem;
+}
+
+.main-page-advantages .main-page-advantages-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 1rem;
+    border-radius: 0.5rem;
+    z-index: 1;
+}
+
+.main-page-advantages img {
+    width: 100%;
+    height: 50vh;
+    object-fit: cover;
+    object-position: center;
+    filter: brightness(0.5);
+}
+
 
 /* Mobile Anpassungen */
 
