--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="{{ asset('assets/css/header.css') }}">
   <link rel="stylesheet" href="{{ asset('assets/css/available-rooms.css') }}">
   <link rel="stylesheet" href="{{ asset('assets/css/rooms.css') }}">
+  <link rel="stylesheet" href="{{ asset('assets/css/booking-rooms.css') }}">
   <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}">
   <!-- FontAwesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -75,13 +76,6 @@
                     <i class="fas fa-bed"></i> Rooms
                 </a>
             </li>
-            {% if is_granted('ROLE_ADMIN') and is_granted('ROLE_USER') %}
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('app_rooms_index') }}">
-                    <i class="fas fa-bed"></i> Edit Rooms
-                </a>
-            </li>
-            {% endif %}
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('contact') }}">
                     <i class="fas fa-envelope"></i> Contact
@@ -95,10 +89,17 @@
             </li>
             {% endif %}
             {% if is_granted('ROLE_ADMIN') %}
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('app_customers') }}">
-                    <i class="fas fa-users"></i> Customers
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-user-cog"></i> Admin
                 </a>
+                <div class="dropdown-menu" aria-labelledby="adminDropdown">
+                    {% if is_granted('ROLE_ADMIN') %}
+                    <a class="dropdown-item" href="{{ path('app_customers') }}"><i class="fas fa-users"></i> Customers</a>
+                    <a class="dropdown-item" href="{{ path('app_booking_filter') }}"><i class="fas fa-filter"></i> Bookings</a>
+                    <a class="dropdown-item" href="{{ path('app_rooms_index') }}"><i class="fas fa-bed"></i> Rooms</a>
+                    {% endif %}
+                </div>
             </li>
             {% endif %}
             {% if app.user %}
